0.0914 2020-09-26
  - Class method is renamed to Static method. This is only SPVM document changing.
  - Matrix modules is removed from SPVM core, and moved to SPVM::AI::Util of CPAN module.
0.0913 2020-09-23
  - add SPVM::Matrix::Util
  - SPVM::Matrix::Float methods is moved to SPVM::Matrix::Util
  - SPVM::Matrix::Double methods is moved to SPVM::Matrix::Util
0.0912 2020-09-14
  - rename SPVM::Complex_2d x to re
  - rename SPVM::Complex_2d y to im
  - rename SPVM::Complex_2f x to re
  - rename SPVM::Complex_2f y to im
  - rename SPVM::Matrix::Double col to columns_length
  - rename SPVM::Matrix::Double row to rows_length
  - rename SPVM::Matrix::Float col to columns_length
  - rename SPVM::Matrix::Float row to rows_length
  
0.0911 2020-09-04
  - add complex functions to SPVM::Math
  
    native sub cacos : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub cacosf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub casin : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub casinf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub catan : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub catanf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub ccos : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub ccosf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub csin : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub csinf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub ctan : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub ctanf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub cacosh : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub cacoshf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub casinh : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub casinhf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub catanh : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub catanhf : SPVM::Complex_2f ($z : SPVM::Complex_2f);
