@@ -1,6 +1,7 @@
 0.0914 2020-09-26
   - Class method is renamed to Static method. This is only SPVM document changing.
   - Matrix modules is removed from SPVM core, and moved to SPVM::AI::Util of CPAN module.
+  - Big array test become private tests because not understandable memory error occured in some environment.
 0.0913 2020-09-23
   - add SPVM::Matrix::Util
   - SPVM::Matrix::Float methods is moved to SPVM::Matrix::Util
